# bevdet_ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: bevdet.param.yaml
config/bevdet/: config.yaml  configure.yaml
config/bevdet/cfgs/: bevdet.yaml
include/: bevdet_node.h  test.h
include/bevdet/: bevdet.h  common.h  data.h  postprocess.h
launch/: bevdet.launch.py  bevdet.launch.xml
src/: bevdet_demo.cpp  bevdet_node.cpp  test.cpp
src/bevdet/: bevdet.cpp  data.cpp  postprocess.cu
